--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,7 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  /* margin: 0 auto; */
+  /* padding: 2rem; */
   text-align: center;
 }
 
@@ -39,4 +39,39 @@
 
 .read-the-docs {
   color: #888;
+}
+
+body, html {
+  margin: 0;
+  height: 100%;
+}
+
+/* Holds sidebar and content pane */
+.container {
+  display: flex;
+  height: 100vh;
+}
+
+.navbar {
+  height: 100px;
+  background-color: aquamarine;
+}
+
+.sidebar {
+  width: 250px;
+  background-color: #f2f2f2;
+  padding: 1rem;
+  box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+}
+
+/* Case detail pane */
+.main {
+  flex: 1;
+  padding: 1rem;
+  background-color: #ffffc0;
+}
+
+/* Style of currently selected case in sidebar */
+.active {
+  background-color: lightblue
 }
